# YOLOv8_ROS2

./: README.md
install/camera_pkg/lib/camera_pkg/: camera_pub
install/camera_pkg/share/camera_pkg/: package.sh  package.xml
install/yolov8_pkg/lib/yolo_pkg/: yolov8_node
install/yolov8_pkg/share/yolov8_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/camera_pkg/: CMakeLists.txt  setup.py
src/camera_pkg/camera_pkg/: camera_node.py
src/yolov8_marker_detector/: package.xml  setup.cfg  setup.py
src/yolov8_marker_detector/yolov8_marker_detector/: marker_detector_node.py  test.py
src/yolov8_pkg/: CMakeLists.txt  package.xml  setup.py
yolov8_train/: README.md  marker_detector_node.py
yolov8_train/runs/detect/train/: args.yaml
yolov8_train/ultralytics/yolo/data/datasets/: mydatas.yaml
