cmake_minimum_required(VERSION 3.5)
project(yolov8_pkg)

find_package(ament_cmake REQUIRED)
find_package(rclpy REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(cv_bridge REQUIRED)
find_package(ultralytics REQUIRED)
find_package(cv2 REQUIRED)

ament_python_install_package(${PROJECT_NAME})

install(PROGRAMS
  scripts/setup.py
  DESTINATION lib/${PROJECT_NAME}
)
ament_package()
